2005-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/font-select.cc (get_font_by_design_size): revert
	pango_description_string as well.

	* lily/system.cc (set_loose_columns): put loose column just left
	of next column.

	* lily/include/group-interface.hh (extract_grob_array): rename
	from Pointer_group_interface__extract_grobs

	* input/regression/ledger-line-minimum.ly (texidoc): new file.

	* lily/ledger-line-spanner.cc (set_spacing_rods): new
	function. Keep ledgered note heads at a minimum distance.
	Introduce minimum-length-fraction
	(print): introduce length-fraction property.

2005-03-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* tex/GNUmakefile: remove latin1.enc rules.

2005-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/titling.scm: Typo.

	* input/regression/score-text.ly: Really add.

	* lily/score.cc: Bugfixes for SCM header_ and texts_ members.

2005-03-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/open-type-font-scheme.cc:  new file.

2005-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/titling.scm (layout-extract-page-properties): Rename from
	page-properties.  Update callers.

	* lily/lexer.ll (Lily_lexer):
	* lily/parser.yy: Junk lyric_markup state.

	* Documentation/topdocs/NEWS.tely (Top): Mention markup text feature.

	* scripts/lilypond-book.py (PREAMBLE_LY): toplevel-music-handler:
	Add texts parameter.

2005-03-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lexer.ll (lyric_markup): New mode.
	(Lily_lexer::push_lyric_markup_state): New method.
	(MARKUPCOMMAND): Markup during lyric mode returns LYRIC_MARKUP.

	* lily/parser.yy (book_body):
	(toplevel_expression): Grok \markup texts.

	* lily/score-scheme.cc (ly:music-scorify): 
	* scm/lily-library.scm (collect-music-for-book): Take texts
	parameter.

	* lily/score.cc (texts_): New member.

	* lily/paper-book.cc (systems): Format score texts.

	* score-text.ly: New file.

	* ttftool/SConscript:
	* kpath-guile/SConscript: New file.

	* lily/SConscript: