@@ -1,11 +1,10 @@
-/*   
-accidental-interface.hh -- declare  Accidental_interface
-
-source file of the GNU LilyPond music typesetter
-
-(c) 2002--2005 Han-Wen Nienhuys <hanwen@cs.uu.nl>
-
- */
+/*
+  accidental-interface.hh -- declare  Accidental_interface
+  
+  source file of the GNU LilyPond music typesetter
+  
+  (c) 2002--2005 Han-Wen Nienhuys <hanwen@cs.uu.nl>
+*/
 
 #ifndef ACCIDENTAL_INTERFACE_HH
 #define ACCIDENTAL_INTERFACE_HH
