@@ -61,6 +61,5 @@ DECLARE_UNSMOB(Music, music);
 
 Music *make_music_by_name (SCM sym);
 SCM ly_music_deep_copy (SCM);
-SCM ly_music_scorify (SCM, SCM, SCM);
 
 #endif /* MUSIC_HH */
