@@ -532,9 +532,9 @@ PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 %%%% Options: [%(option_string)s]
 
 #(set! toplevel-score-handler ly:parser-print-score)
-#(set! toplevel-music-handler (lambda (p m t)
+#(set! toplevel-music-handler (lambda (p m)
 			       (ly:parser-print-score
-				p (ly:music-scorify m t p))))
+				p (ly:music-scorify m p))))
 
 #(define version-seen? #t)
 %(preamble_string)s
