@@ -1,3 +1,15 @@
+2005-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/book.cc:
+	* lily/paper-book.cc: Fold hearders, score and texts into scores_.
+
+	* lily/parser.yy: Handle toplevel and book texts as score.
+
+	* scm/page-layout.scm (default-page-make-stencil):
+	Bugfix: (page-properties rename.
+
+	* scm/backend-library.scm (ly:system): Typo.
+
 2005-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/font-select.cc (get_font_by_design_size): revert
